flow count, sort, partition

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,45 +1,45 @@
-#Ö¸¶¨logger
-# ÅäÖÃLogger×é¼ş
-# Éè¶¨Log4jµÄÈÕÖ¾¼¶±ğ(error warn info  debug)
-# Êä³öÄ¿µÄµØ(Console, logfileÊÇappenderµÄÃû×Ö,ÊÇ×Ô¼º¶¨ÒåµÄ,ºóÃæ²Å¸³Óè¾ßÌåµÄº¬Òå)
+#æŒ‡å®šlogger
+# é…ç½®Loggerç»„ä»¶
+# è®¾å®šLog4jçš„æ—¥å¿—çº§åˆ«(error warn info  debug)
+# è¾“å‡ºç›®çš„åœ°(Console, logfileæ˜¯appenderçš„åå­—,æ˜¯è‡ªå·±å®šä¹‰çš„,åé¢æ‰èµ‹äºˆå…·ä½“çš„å«ä¹‰)
 
 # Rules reminder:
 # DEBUG < INFO < WARN < ERROR < FATAL
 # Global logging configuration
-log4j.rootLogger=DEBUG, Console
+log4j.rootLogger=DEBUG, logfile
 #################################################################################################
-#Ö¸¶¨appender(Ä¿µÄµØ)
-#Éè¶¨LoggerµÄConsole(appenderµÄÃû×Ö)µÄAppenderÀàĞÍÎª¿ØÖÆÌ¨Êä³ö
-#org.apache.log4j.ConsoleAppender ±íÃ÷ ConsoleÊÇ¿ØÖÆÌ¨Êä³ö
+#æŒ‡å®šappender(ç›®çš„åœ°)
+#è®¾å®šLoggerçš„Console(appenderçš„åå­—)çš„Appenderç±»å‹ä¸ºæ§åˆ¶å°è¾“å‡º
+#org.apache.log4j.ConsoleAppender è¡¨æ˜ Consoleæ˜¯æ§åˆ¶å°è¾“å‡º
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 
-#Êä³öµÄ¸ñÊ½
-#Éè¶¨ConsoleµÄAppender²¼¾ÖLayout
-#org.apache.log4j.PatternLayout£¨¿ÉÒÔÁé»îµØÖ¸¶¨²¼¾ÖÄ£Ê½£©°üº¬Ñ¡Ïî£º
-#                     ConversionPattern=%m%n :Ö¸¶¨ÔõÑù¸ñÊ½»¯Ö¸¶¨µÄÏûÏ¢
+#è¾“å‡ºçš„æ ¼å¼
+#è®¾å®šConsoleçš„Appenderå¸ƒå±€Layout
+#org.apache.log4j.PatternLayoutï¼ˆå¯ä»¥çµæ´»åœ°æŒ‡å®šå¸ƒå±€æ¨¡å¼ï¼‰åŒ…å«é€‰é¡¹ï¼š
+#                     ConversionPattern=%m%n :æŒ‡å®šæ€æ ·æ ¼å¼åŒ–æŒ‡å®šçš„æ¶ˆæ¯
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.Target=System.out
 #2009-09-29 07:30:43,265 INFO com.itcast.web.controller.SearchCdServlet.doGet() - e
 log4j.appender.Console.layout.ConversionPattern=%d %p %c.%M() - %m%n
 
 #################################################################################################
-#Éè¶¨LoggerµÄlogfile(appenderµÄÃû×Ö)µÄAppenderÀàĞÍÎªÎÄ¼ş´óĞ¡µ½´ïÖ¸¶¨³ß´çµÄÊ±ºò²úÉúÒ»¸öĞÂµÄÎÄ¼ş
+#è®¾å®šLoggerçš„logfile(appenderçš„åå­—)çš„Appenderç±»å‹ä¸ºæ–‡ä»¶å¤§å°åˆ°è¾¾æŒ‡å®šå°ºå¯¸çš„æ—¶å€™äº§ç”Ÿä¸€ä¸ªæ–°çš„æ–‡ä»¶
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
 
-#Éè¶¨ÎÄ¼şµÄÊä³öÂ·¾¶(Ö¸¶¨ÎÄ¼şµÄÃû×ÖºÍÂ·¾¶,tomcatµÄÆô¶¯Â·¾¶)
+#è®¾å®šæ–‡ä»¶çš„è¾“å‡ºè·¯å¾„(æŒ‡å®šæ–‡ä»¶çš„åå­—å’Œè·¯å¾„,tomcatçš„å¯åŠ¨è·¯å¾„)
 log4j.appender.logfile.File=logs/agent-service.log
 
-#ÊÇ·ñ×·¼Ó
+#æ˜¯å¦è¿½åŠ 
 log4j.appender.logfile.Append=false
 
-#Éè¶¨ºó×º¿ÉÒÔÊÇKB, MB »òÕßÊÇ GB. ÔÚÈÕÖ¾ÎÄ¼şµ½´ï¸Ã´óĞ¡Ê±,½«»á×Ô¶¯¹ö¶¯,¼´½«Ô­À´µÄÄÚÈİÒÆµ½logstrore.log.1ÎÄ¼ş
-log4j.appender.logfile.MaxFileSize=8KB
+#è®¾å®šåç¼€å¯ä»¥æ˜¯KB, MB æˆ–è€…æ˜¯ GB. åœ¨æ—¥å¿—æ–‡ä»¶åˆ°è¾¾è¯¥å¤§å°æ—¶,å°†ä¼šè‡ªåŠ¨æ»šåŠ¨,å³å°†åŸæ¥çš„å†…å®¹ç§»åˆ°logstrore.log.1æ–‡ä»¶
+log4j.appender.logfile.MaxFileSize=100MB
 
 #log4j.appender.logfile.DatePattern='.'yyyy-MM-dd
 
-#Keep three backup files.Ö¸¶¨¿ÉÒÔ²úÉúµÄ¹ö¶¯ÎÄ¼şµÄ×î´óÊı
+#Keep three backup files.æŒ‡å®šå¯ä»¥äº§ç”Ÿçš„æ»šåŠ¨æ–‡ä»¶çš„æœ€å¤§æ•°
 log4j.appender.logfile.MaxBackupIndex=4
 
-#Éè¶¨logfileµÄAppender²¼¾ÖLayout
+#è®¾å®šlogfileçš„Appenderå¸ƒå±€Layout
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p %c.%M() - %m%n
